--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <!-- Our Colors -->
+    <color name="colorTopBar">#242525</color>
+    <color name="colorTopText">#DFDFDF</color>
+
 </resources>
