--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.eteam.echeque.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:id="@+id/action_import"
+        android:orderInCategory="2"
+        android:icon="@drawable/ic_importphoto"
+        android:title="Import"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_takeapic"
+        android:icon="@drawable/ic_takeapic"
+        android:orderInCategory="1"
+        android:title="Take a Picture"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="4"
+        android:title="About"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_idc"
+        android:orderInCategory="3"
+        android:title="Idk"
         app:showAsAction="never" />
 </menu>
