--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,10 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_main"
+        android:layout_below="@+id/toolbar"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent" />
 
     <!--<android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
