--- a/app/src/main/res/layout/activity_opened_file.xml
+++ b/app/src/main/res/layout/activity_opened_file.xml
@@ -47,6 +47,7 @@
                 android:id="@+id/date_text"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:scrollbars = "vertical"
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/colorTopBar"
                 android:textSize="25dp" />
@@ -67,6 +68,7 @@
             <TextView
                 android:id="@+id/total_text"
                 android:layout_width="match_parent"
+                android:scrollbars = "vertical"
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
 
