--- a/app/src/main/res/layout/activity_opened_file.xml
+++ b/app/src/main/res/layout/activity_opened_file.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
         <ImageView
             android:id="@+id/FullScr"
+            android:layout_marginTop="55dp"
             android:layout_weight="5"
             android:layout_height="fill_parent"
             android:layout_width="fill_parent">
