--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -66,27 +66,27 @@
                         android:layout_marginTop="3dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="2"
-                        android:src="@drawable/ic_importphoto" />
+                        android:src="@drawable/ic_folder_open_black_24dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal|bottom"
-                        android:text="Import"
+                        android:text="New Document"
                         android:layout_weight="10"
-                        android:textColor="@color/colorTopText"
+                        android:textColor="@color/colorTopBar"
                         android:textSize="18sp" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-            android:id="@+id/card2"
             android:layout_width="0dp"
             android:layout_height="200dp"
             android:layout_marginTop="200dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_marginLeft="16dp"
+            app:cardBackgroundColor="@color/colorTopBar"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="3dp"
             app:cardCornerRadius="8dp"
@@ -100,32 +100,31 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/cardImage2"
                     android:layout_marginTop="3dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="2"
-                    android:src="@drawable/ic_importphoto" />
+                    android:src="@drawable/ic_problock" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal|bottom"
                     android:layout_weight="10"
-                    android:text="Import"
+                    android:text="New Document"
                     android:textColor="@color/colorTopText"
                     android:textSize="18sp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-                android:id="@+id/card3"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
+                app:cardBackgroundColor="@color/colorTopBar"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="3dp"
@@ -140,32 +139,31 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/cardImage3"
                         android:layout_marginTop="3dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="2"
-                        android:src="@drawable/ic_importphoto" />
+                        android:src="@drawable/ic_problock" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal|bottom"
                         android:layout_weight="10"
-                        android:text="Import"
+                        android:text="New Document"
                         android:textColor="@color/colorTopText"
                         android:textSize="18sp" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-                android:id="@+id/card4"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
+                app:cardBackgroundColor="@color/colorTopBar"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="3dp"
@@ -180,32 +178,31 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/cardImage4"
                         android:layout_marginTop="3dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="2"
-                        android:src="@drawable/ic_importphoto" />
+                        android:src="@drawable/ic_problock" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal|bottom"
                         android:layout_weight="10"
-                        android:text="Import"
+                        android:text="New Document"
                         android:textColor="@color/colorTopText"
                         android:textSize="18sp" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-                android:id="@+id/card5"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
+                app:cardBackgroundColor="@color/colorTopBar"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="3dp"
@@ -220,32 +217,31 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/cardImage5"
                         android:layout_marginTop="3dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="2"
-                        android:src="@drawable/ic_importphoto" />
+                        android:src="@drawable/ic_problock" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal|bottom"
                         android:layout_weight="10"
-                        android:text="Import"
+                        android:text="New Document"
                         android:textColor="@color/colorTopText"
                         android:textSize="18sp" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-                android:id="@+id/card6"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
+                app:cardBackgroundColor="@color/colorTopBar"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="3dp"
@@ -260,20 +256,19 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/cardImage6"
                         android:layout_marginTop="3dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="2"
-                        android:src="@drawable/ic_importphoto" />
+                        android:src="@drawable/ic_problock" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal|bottom"
                         android:layout_weight="10"
-                        android:text="Import"
+                        android:text="New Document"
                         android:textColor="@color/colorTopText"
                         android:textSize="18sp" />
                 </LinearLayout>
