--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,6 +16,6 @@
     <item
         android:id="@+id/action_idc"
         android:orderInCategory="3"
-        android:title="Idk"
+        android:title="Buy PRO version"
         app:showAsAction="never" />
 </menu>
